tests/specs/ecosystem/hinw/vdf_parser/1_1_5.test
hinw/vdf-parser/1.1.5
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Check file://<tmpdir>/index.ts
error: TS2304 [ERROR]: Cannot find name 'BufferEncoding'.
  override _transform(chunk: string, encoding: BufferEncoding, callback: stream.TransformCallback): void {}
                                               ~~~~~~~~~~~~~~
    at file://<tmpdir>/src/parser.ts:126:48

